Document that source keeps a ref on server until it's destroyed

https://bugzilla.gnome.org/show_bug.cgi?id=749227